Added fire ammo and a recipe for the gun